[package]
name = "container_hosts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.105"
serde = {version = "1.0.183", features = ["derive"]}
curl = "0.4.44"
clap = { version = "4.4.3", features = ["derive"] }

[profile.release]
strip=true
lto=true
